--- a/moiveapp/src/routes/Detail.css
+++ b/moiveapp/src/routes/Detail.css
@@ -35,7 +35,7 @@
 .detail-poster {
   width: 300px;
   border-radius: 10px;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.6) ;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
 }
 
 .detail-info {
@@ -44,7 +44,7 @@
 
 .detail-title {
   font-size: 2.8rem;
-  font-weight: 700px;
+  font-weight: 700;
   margin-bottom: 10px;
 }
 
